# webgpu-native-examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: pages.yml
docker/: Dockerfile
lib/wgpu_native/: CMakeLists.txt  wgpu_native.cpp  wgpu_native.h  wgpu_native_linux.cpp
src/: main.c
src/core/: api.h  camera.c  camera.h  file.c  file.h  frustum.c  frustum.h  gltf_model.c  gltf_model.h  image_loader.c  image_loader.h  input.h  log.c  log.h  macro.h  math.c  math.h  platform.h  utils.c  utils.h  video_decode.c  video_decode.h  window.c  window.h
src/examples/: a_buffer.c  animometer.c  aquarium.c  basisu.c  bind_groups.c  blending.c  blinn_phong.c  blinn_phong_lighting.c  bloom.c  camera.c  cameras.c  cascaded_shadow_mapping.c  clear_screen.c  clustered_shading.c  common_shaders.h  compute_boids.c  compute_cloth.c  compute_metaballs.c  compute_n_body.c  compute_particles.c  compute_particles_easing.c  compute_particles_webgpu_logo.c  compute_ray_tracing.c  compute_shader.c  conservative_raster.c  conway.c  conway_paletted_blurring.c  coordinate_system.c  cornell_box.c  cube_reflection.c  cubemap.c  deferred_multi_sampling.c  deferred_rendering.c  deferred_shading.c  deferred_shadows.c  dunes.c  dynamic_uniform_buffer.c  equirectangular_image.c  example_base.c  example_base.h  (+92 more)
src/webgpu/: api.h  buffer.c  buffer.h  context.c  context.h  gltf_model.c  gltf_model.h  imgui_overlay.c  imgui_overlay.h  pbr.c  pbr.h  shader.c  shader.h  text_overlay.c  text_overlay.h  texture.c  texture.h  wgpu_common.c  wgpu_common.h
wasm/: CMakeLists.txt  CMakePresets.json  serve.py
wasm/templates/: example.html.in  index.html.in
